--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,7 +101,8 @@ footer i:hover {
   z-index: 1;
 }
 
-.section-title {
+.section-title,
+.page-title {
   position: relative;
   padding-bottom: 10px;
   margin-bottom: 24px;
@@ -110,17 +111,30 @@ footer i:hover {
 .section-title::after {
   content: "";
   position: absolute;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   bottom: 0;
   width: 100%;
   height: 3px;
   background-color: #0d6efd;
 }
 
+.page-title::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 10px;
+  transform: translateX(-50%);
+  width: 25%;
+  min-width: 200px;
+  height: 4px;
+  background-color: #0d6efd;
+}
+
 /* Banner */
 .services-hero,
 .portfolio-hero {
-  position: relative;
+  /* position: relative; */
   min-height: 300px;
   background-image: url("/banner.jpg");
   background-size: cover;
@@ -128,11 +142,13 @@ footer i:hover {
 }
 
 /* Buttons */
-.portfolio-card .btn {
+.portfolio-card .btn,
+.contact-form .btn {
   transition: background-color 0.3s ease;
 }
 
-.portfolio-card .btn:hover {
+.portfolio-card .btn:hover,
+.contact-form .btn:hover {
   background-color: #3383fa;
 }
 
