--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-main: var(--font-nunito);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,7 +20,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-main), system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -131,7 +132,7 @@ footer i:hover {
   left: 50%;
   bottom: 10px;
   transform: translateX(-50%);
-  width: 25%;
+  width: 35%;
   min-width: 200px;
   height: 4px;
   background-color: #0d6efd;
