--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,12 +18,18 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: var(--font-main), system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  font-family: var(--font-nunito), system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600 !important;
+}
+
+strong {
+  font-weight: 600 !important;
+}
+
 
 * {
   box-sizing: border-box;
