--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,11 +142,12 @@ footer i:hover {
 /* Banner */
 .services-hero,
 .portfolio-hero {
-  /* position: relative; */
-  min-height: 300px;
+  width: 100%;
+  aspect-ratio: 1920 / 300;
   background-image: url("/banner.jpg");
-  background-size: cover;
+  background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
 }
 
 /* Buttons */
